[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/cards/move_cards/1.png" type="Texture" id=1]
[ext_resource path="res://script/move_card.gd" type="Script" id=2]
[ext_resource path="res://tscn/move_card.tres" type="Material" id=3]

[node name="move_card" type="TextureButton"]
material = ExtResource( 3 )
margin_right = 412.0
margin_bottom = 563.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Tween2" type="Tween" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_move_card_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
